--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@
 .h100 {
   height: calc(100vh - 64px);
 }
+
+.error-text-block{
+  margin: 20px;
+  text-align: center;
+  width: 100%;
+}
+
+.calendar-row{
+  margin: 0 auto;
+  max-width: 1200px;
+}
